# airflow-dbt-duckdb-ELT-pipeline

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: elt_pipeline_dag.py
data/: crypto.duckdb
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: daily_candlestick.sql
dbt_project/models/staging/: sources.yml  stg_raw_prices.sql
include/: common_configs.py  extract.py  load.py  visualize.py
